# bill_taxonomy

./: .gitignore  02_cedar_pine.ipynb  LICENSE  README.md  bill_taxonomy.yml  configs.yml  requirements.txt  write_data.yml
apps/: run.py
apps/flaskexample/: support_functions.py  top_ny_bills.py  views.py
apps/flaskexample/templates/: ny_bill_input.html  ny_bills.html  ny_bills_output.html
apps/identifyabill/: __init__.py  support_functions.py  views.py
apps/identifyabill/templates/: index.html  input.html  lda_vis.html  ny_bill_input.html  ny_bills_output.html  output.html  results.html  us_bill_input.html  (+1 more)
bills/analyze/: model.py
bills/ingest/: setup_database.py
configs/: postgres_setup.yml
deployment/: Dockerfile  bootstrap.sh  docker-compose.local.yml  docker-compose.yml  ec2_startup.sh
deployment/terraform-ec2/: ec2.tf  iam.tf  main.tf  outputs.tf  variables.tf
notebooks/: 01_ExtractNewYorkBills.ipynb  02_us_congress_bills.ipynb  Congress_Text_Analysis.ipynb  Explore_App.ipynb  ExtractNewYorkBills.ipynb  Load and Save Scores.ipynb  Pipeline.ipynb  Slide_Builder.ipynb  TF_IDF_Keywords_And_Titles.ipynb  Test_Pipeline_Scripts.ipynb  Test_Scripts.ipynb  us_congress_bills.ipynb
src/: __init__.py
src/analyze/: model.py  run_model.py
src/ingest/: access_secrets.py  get_bills.py  ingest_ny_bills.py  ingest_us_bills.py  old_setup_database.py  pyproject.toml  setup_database.py  table_definitions.py
src/report/: make_roc_curve.py  store_db.py
src/utils/: get_time_stamp.py
src/wrangle/: create_corpus.py  create_features.py  make_params.py
(+1 files in other folders)
